[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-utils"
version = "0.2.0"
description = "CLI utilities for Claude Code"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"

[project.scripts]
claude-sessions = "claude_utils.sessions:main"
